# Horace

./: .gitattributes  .gitignore  .gitmodules  .nojekyll  0006-store-built-documentation-in-branch.md  CMakeLists.txt  HORACE.doc  Horace flow chart.ppt  IBU Ideas for Horace.rtf  JVD Ideas for Horace.doc  README.md  TGP Ideas for Horace.doc  TODO.txt  accumulate_sqw.m  bmatrix.m  build_config_string.txt  calc_sqw_urange.m  change_crystal_dnd.m  change_crystal_horace.m  change_crystal_sqw.m  combine_libisis.m  combine_sqw_new.m  convert_to_libisis.m  cut_dnd.m  cut_horace.m  cut_sqe.m  cut_sqw.m  cut_sqw_sym.m  disp2sqw.m  disp2sqw_plot.m  dispersion_plot.m  dnd_binary_op.m  dnd_calculate_qw.m  dnd_checkfields.m  dnd_compact.m  dnd_cut.m  dnd_cut_titles.m  dnd_data_op.m  dnd_display.m  dnd_makefields.m  (+92 more)
_LowLevelCode/Fortran/: CMakeLists.txt  _aaa_readme.txt  herbert_mex_windows.m
_LowLevelCode/cpp/: CMakeLists.txt  CommonCode.h  MatlabCppClassHolder.hpp
_test/: CMakeLists.txt  add_common_test_functions_to_path.m  disabled_tests.md  disabled_tests_herbert.md  disp_valerr.m  dph.m  dpl.m  func_gauss3d.m  get_common_data_path.m  hcompare.m  make_a_slice.m  make_test_IX_dataset_nd.m  pcompare.m  simple_rebin_x.m  simple_rebin_y.m  test0.m  test1.m  test2.m  test_IXTdatasets_1.m  test_IX_dataset_1.m  test_IX_datasets.m  test_KNOWN_PROBLEMS.m  test_array_common_1.m  test_bin_boundaries_from_descriptor.m  test_bin_index.m  test_da_1.m  test_deriv.m  test_integrate.m  test_integrate_2d.m  test_parsing_1.m  test_parsing_2.m  test_rebin.m  test_rebin_1d_hist_get_xarr.m  test_rotmat.m  test_rotmat_and_rotvec.m  test_shift_scale.m  test_sigvar_1.m  test_translate_read_write.m  use_mex.m
_test/common_data/: 9cards_4_4to1.par  Fe4_2K_reduced_11l.spe  MAP11014v2.nxspe.REMOVED.git-id  MAPS_A1_and_A2_first_pack.par  MAPS_A1_and_A2_first_pack.phx  MAPS_IX_detector_array_examples.mat.REMOVED.git-id  MAPS_IX_detector_array_examples.readme  MAR11001_test.nxspe  MERLIN_one2one_181.par  currently_not_supported_NXSPE.nxspe.REMOVED.git-id  demo_par.PAR  dnd_2d.sqw  faccess_sqw_v4_sample.sqw  gen_sqw_96dets.nxspe  inst_let_ei3p7_240_120.nxspe  inst_maps_ei400_600hz.nxspe  inst_merlin_ei120_600hz.nxspe  map5935_small.nxspe.REMOVED.git-id  map_4to1_dec09.par  map_4to1_dec09.par.REMOVED.git-id  map_4to1_jul09.par  map_4to1_jul09.par.REMOVED.git-id  map_4to1_jul09.phx  map_4to1_jul09.phx.REMOVED.git-id  nxspe_version1_0.nxspe  proj_tester.m  spe_info_correspondent2demo_par.spe  spe_info_inconsistent2demo_par.spe  spe_with_NANs.spe  sqw_1d_2.sqw  sqw_2d_2.sqw  sqwfile_readwrite_testdata_base_objects.mat  testsqw_w3_small_v1.mat  w2d_qq_small_d2d.sqw  w2d_qq_small_sqw.sqw  wrong.spe_h5  wrong_demo_par_7Col.PAR  wrong_par.PAR
_test/common_data_files/: map_4to1_jul09.phx.REMOVED.git-id
_test/common_functions/: AxesBlockBase_tester.m  FakeFAccess.m  JETester.m  JETesterSendData.m  JETesterWithData.m  JEwithLogTester.m  MPI_Test_Common.m  TestCaseWithSave.m  add_data_to_list.m  benchmark_function.m  check_matfile_IO.m  clean_temporary_area.m  clean_up_file.m  cleanup_file.m  combine_cuts.m  common_sqw_file_state_holder.m  common_state_holder.m  concatenate_pixel_pages.m  create_test_instrument.m  data_plot_interface_tester.m  debug_histogram_array.m  del_memmapfile_files.m  disp_1D_hafm.m  disp_bcc_hfm_2_testfunc.m  disp_bcc_hfm_testfunc.m  disp_fcc_hfm_testfunc.m  disp_sc_hfm_testfunc.m  file_delete.m  finish_task_tester.m  gen_tmp_file_path.m  get_num_cores.m  get_random_data_in_range.m  hashable_obj_tester.m  is_cut_equal.m  is_same_fit.m  make_bragg_blobs.m  seed_rng.m  set_config_option.m  set_header_fudge.m  set_local_parallel_config.m  (+16 more)
_test/external_code_ref/: bin_boundaries_from_descriptor.m
_test/matlab_xunit_ISISextras/: TestCaseWithSave2.m  TestCaseWithSave2_Alex.m  TestCaseWithSave2_work.m  assertEqualToTol.m  oldTestCaseWithSaveInterface.m  test_TestCaseWithSave_example_2.m
_test/performance_test/: .gitignore  IDaaaSvsISISCOMPUTE_gen_sqw_performance.odp  SQW_GENCUT_Perf.mat  _exclude_all.txt  cut_performance_debug.m  kick_and_test.py  one2one_125.par  one2one_125.par.REMOVED.git-id  profile_machine.m  run_performance_tests.m  source_nxspe_files_generator.m  speed_test.m  test_SQW_GENCUT_perf.m  test_SQW_GENCUT_perf_PerfRez.xml  test_SQW_GENCUT_perf_PerfRez_to07_2021.xml
_test/shared/: deterministic_pseudorandom_sequence.m  noisify_test_rand.m  seed_rng.m
_test/test_IX_classes/: IX_dataset_tester.m  aaa_KNOWN_PROBLEMS.m  aaa_setup.m  create_testdata_IX_datasets_ref.m  make_IX_dataset_1d.m  make_IX_dataset_nd_random.m  make_IX_datasets_ref.m  make_testdata_IX_dataset_1d.m  make_testdata_IX_dataset_2d.m  test_IX_axis.m  test_IX_dataset_1d.m  test_IX_dataset_1d_ops1_2_Part1.m  (+36 more)
admin/: CMakeLists.txt  MatlabDocMaker.m  README.md  banner_to_screen.m  build_fortran_module.m  build_version_h.m  cache.m  cache.py  check_herbert_mex.m  check_horace_mex.m  clean_temporary_directory.m  compiled_worker.m  convert_uoffset_to_crystal_cartesian.m  copy_files_list.m  copy_git_hooks.m  dump_profile.m  find_hpc_options.m  gen_System_path.m  genpath_special.m  getComputerName.m  get_bm_name.m  herbert_get_build_version.m.template  herbert_get_raw_version.m.template  herbert_mex.m  herbert_mex_mpi.m  herbert_on.m.template  herbert_test_data_path.m  herbert_version.m  herbert_version.m.template  horace_get_build_version.m.template  horace_get_raw_version.m.template  horace_install.m  horace_mex.m  horace_mex_mpi.m  horace_off.m  horace_on.m.template  horace_version.m  hpc.m  is_herbert_used.m  is_idaaas.m  (+39 more)
cmake/: .cmake-find  CMakeLists.txt  FindHerbert.cmake  MatlabHelpers.cmake  PACE_AddCppUnitTest.cmake  PACE_AddMex.cmake  PACE_Docs.cmake  PACE_FindMatlab.cmake  herbert_AddMex.cmake  herbert_AddUnitTest.cmake  herbert_CPackConfig.cmake  herbert_FindGTest.cmake  herbert_FindMPI.cmake  herbert_FindMatlab.cmake  herbert_Version.cmake  horace_AddMex.cmake  horace_AddUnitTest.cmake  horace_FindCLangTidy.cmake  horace_FindGTest.cmake  horace_FindHDF5.cmake  horace_FindMatlab.cmake  horace_Version.cmake
(+13945 files in other folders)
