# =============================================================================
# Install commands
# =============================================================================
#install(
#    DIRECTORY "external" "shared"
#    DESTINATION "Herbert/cmake"
#    USE_SOURCE_PERMISSIONS
#)
#install(
#    FILES ".cmake-find"
#    DESTINATION "Herbert/cmake"
#)
